[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/wind_hud.gd" id="1_hud"]

[node name="WindHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_hud")

[node name="WindArrow" type="Polygon2D" parent="."]
position = Vector2(60, 60)
color = Color(1, 1, 1, 0.8)
polygon = PackedVector2Array(0, -20, -8, 14, 0, 8, 8, 14)

[node name="WindLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 88.0
offset_right = 116.0
offset_bottom = 108.0
text = "Wind"
horizontal_alignment = 1

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 110.0
offset_right = 160.0
offset_bottom = 130.0
text = "Speed: 0"

[node name="SailLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 132.0
offset_right = 160.0
offset_bottom = 152.0
text = "Sail: +0Â°"

[node name="ControlsHint" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 164.0
offset_right = 220.0
offset_bottom = 220.0
text = "A/D - Steer
Q/E - Trim Sail
W/S - Oar (slow)"
modulate = Color(1, 1, 1, 0.6)
